# miniC

./: .gitignore  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  RECORD.md  bash.sh  build.ninja  cmake_install.cmake  llvm-awgTdc  llvm-tcTAqn  llvm.sh  main.cpp  oj_load.py  oj_upload.py  readmeBywh.md
backend/: CodeGeneratorAsm.cpp
backend/arm32/: PlatformArm32.h
backend/arm64/: CodeGeneratorArm64.cpp  CodeGeneratorArm64.h  ILocArm64.cpp  ILocArm64.h  InstSelectorArm64.cpp  InstSelectorArm64.h  LinearScanRegisterAllocator.cpp  LinearScanRegisterAllocator.h  LivenessAnalysis.cpp  LivenessAnalysis.h  PlatformArm64.cpp  PlatformArm64.h  SimpleRegisterAllocator.cpp  SimpleRegisterAllocator.h
frontend/: AST.cpp  AST.h  Graph.cpp
frontend/antlr4/: Antlr4CSTVisitor.cpp  Antlr4CSTVisitor.h  Antlr4Executor.cpp  MiniC.g4  MiniC.interp  MiniCBaseVisitor.cpp  MiniCBaseVisitor.h  MiniCLexer.cpp  MiniCLexer.h  MiniCLexer.interp  MiniCParser.cpp  MiniCParser.h  MiniCVisitor.cpp  MiniCVisitor.h  SysY.g4  SysY.tokens  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h
frontend/antlr4/autogenerated/: MiniC.interp  MiniC.tokens  MiniCBaseVisitor.h  MiniCLexer.cpp  MiniCLexer.h  MiniCLexer.interp  MiniCLexer.tokens  MiniCParser.cpp  MiniCParser.h  MiniCVisitor.h  SysY.interp  SysY.tokens  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h
frontend/flexbison/autogenerated/: MiniCBison.cpp  MiniCBison.h  MiniCFlex.cpp  MiniCFlex.h
ir/: Function.cpp  Function.h  GlobalValue.h  Instruction.h  Type.h  Use.h  User.cpp  User.h  Value.h
ir/Generator/: IRGenerator.cpp  IRGenerator.h
ir/Instructions/: ArgInstruction.cpp  BinaryInstruction.cpp  BitCastInstruction.cpp  BitCastInstruction.h  BranchConditional.cpp  BranchConditional.h  CastInstruction.cpp  CastInstruction.h  EntryInstruction.cpp  ExitInstruction.cpp  FuncCallInstruction.cpp  GetElementPtrInstruction.cpp  GetElementPtrInstruction.h  GotoIfZeroInstruction.cpp  GotoIfZeroInstruction.h  GotoInstruction.cpp  LoadInstruction.cpp  LoadInstruction.h  MoveInstruction.cpp  MoveInstruction.h  StoreInstruction.cpp  StoreInstruction.h  UnaryInstruction.cpp  UnaryInstruction.h
ir/Types/: ArrayType.cpp  ArrayType.h  FloatType.cpp  FloatType.h  IntegerType.cpp  IntegerType.h  PointerType.h
ir/Values/: ConstFloat.h  ConstInt.h  FormalParam.h  GlobalVariable.h
symboltable/: Module.cpp  Module.h  ScopeStack.cpp
tests/: test  test-mul.c  test.armasm  test.c  test.ir  test.ll  test.s  test1-1-0  test1-1-0.s  test1-1-1  test1-1-1.s  test1-1-standard.ir  test1-1.c  test1-1.ir  test1-1.ll  test1-1.s  test1-1_standard.ir  test1-1_standard.ll  test2-1  test2-1-1.s  test2-1.c  test2-1.ll  test2-1.s  test2-2.ir  test_21.ir  test_31.ir  test_37.ir  test_38.ir  test_40.ir  test_clang_std.ll  test_mul.c  test_std  test_std.ir  test_std.ll  test_std1.ll  test_std_31.ir  test_std_38.ir
utils/: BitMap.h  Common.h
